src/tests/snapshots/alloy__tests__snapshot_tests@function-calls.alloy.snap
---
source: src/tests/mod.rs
expression: tokens
input_file: src/tests/cases/function-calls.alloy
---
[
    Token {
        kind: Number,
        span: Span(
            0,
            1,
        ),
        text: "2",
    },
    Token {
        kind: Dot,
        span: Span(
            1,
            2,
        ),
        text: ".",
    },
    Token {
        kind: Ident,
        span: Span(
            2,
            9,
        ),
        text: "to_unit",
    },
    Token {
        kind: LParen,
        span: Span(
            9,
            10,
        ),
        text: "(",
    },
    Token {
        kind: RParen,
        span: Span(
            10,
            11,
        ),
        text: ")",
    },
    Token {
        kind: Ident,
        span: Span(
            13,
            14,
        ),
        text: "a",
    },
    Token {
        kind: Colon,
        span: Span(
            14,
            15,
        ),
        text: ":",
    },
    Token {
        kind: Equals,
        span: Span(
            15,
            16,
        ),
        text: "=",
    },
    Token {
        kind: Boolean,
        span: Span(
            16,
            20,
        ),
        text: "true",
    },
    Token {
        kind: Ident,
        span: Span(
            21,
            22,
        ),
        text: "a",
    },
    Token {
        kind: Equals,
        span: Span(
            22,
            23,
        ),
        text: "=",
    },
    Token {
        kind: Boolean,
        span: Span(
            23,
            28,
        ),
        text: "false",
    },
    Token {
        kind: Number,
        span: Span(
            29,
            30,
        ),
        text: "3",
    },
    Token {
        kind: Dot,
        span: Span(
            30,
            31,
        ),
        text: ".",
    },
    Token {
        kind: Ident,
        span: Span(
            31,
            38,
        ),
        text: "to_unit",
    },
    Token {
        kind: LParen,
        span: Span(
            38,
            39,
        ),
        text: "(",
    },
    Token {
        kind: Ident,
        span: Span(
            39,
            40,
        ),
        text: "a",
    },
    Token {
        kind: Comma,
        span: Span(
            40,
            41,
        ),
        text: ",",
    },
    Token {
        kind: Number,
        span: Span(
            41,
            42,
        ),
        text: "4",
    },
    Token {
        kind: RParen,
        span: Span(
            42,
            43,
        ),
        text: ")",
    },
]
