src/tests/snapshots/alloy__tests__snapshot_tests@numbers.alloy-3.snap
---
source: src/tests/mod.rs
expression: checked.unwrap()
input_file: src/tests/cases/numbers.alloy
---
Ast(
    [
        Expression {
            kind: Infix {
                op: Add,
                lh: Expression {
                    kind: Infix {
                        op: Add,
                        lh: Expression {
                            kind: LiteralFloat(
                                1.2,
                            ),
                            span: Span(
                                0,
                                3,
                            ),
                            state: Checked(
                                "Float",
                                3,
                            ),
                        },
                        rh: Expression {
                            kind: LiteralInt(
                                100000,
                            ),
                            span: Span(
                                6,
                                13,
                            ),
                            state: Checked(
                                "Int",
                                2,
                            ),
                        },
                    },
                    span: Span(
                        0,
                        13,
                    ),
                    state: Checked(
                        "Float",
                        3,
                    ),
                },
                rh: Expression {
                    kind: LiteralFloat(
                        0.234,
                    ),
                    span: Span(
                        16,
                        20,
                    ),
                    state: Checked(
                        "Float",
                        3,
                    ),
                },
            },
            span: Span(
                0,
                20,
            ),
            state: Checked(
                "Float",
                3,
            ),
        },
    ],
)
