src/tests/snapshots/alloy__tests__snapshot_tests@types.alloy-2.snap
---
source: src/tests/mod.rs
expression: "Parser::new(&lexer).parse().unwrap()"
input_file: src/tests/cases/types.alloy
---
Ast(
    [
        Expression {
            kind: TypeDecl {
                name: "A",
                value: TypeIdent(
                    "Int",
                ),
            },
            span: Span(
                0,
                13,
            ),
            state: Unchecked,
        },
        Expression {
            kind: TypeDecl {
                name: "B",
                value: TypeIdent(
                    "A",
                ),
            },
            span: Span(
                14,
                25,
            ),
            state: Unchecked,
        },
        Expression {
            kind: VariableDecl {
                name: "a",
                value: Expression {
                    kind: LiteralInt(
                        3,
                    ),
                    span: Span(
                        35,
                        36,
                    ),
                    state: Unchecked,
                },
                mutable: false,
                ty: Some(
                    TypeIdent(
                        "Int",
                    ),
                ),
            },
            span: Span(
                27,
                36,
            ),
            state: Unchecked,
        },
        Expression {
            kind: VariableDecl {
                name: "b",
                value: Expression {
                    kind: LiteralInt(
                        4,
                    ),
                    span: Span(
                        43,
                        44,
                    ),
                    state: Unchecked,
                },
                mutable: false,
                ty: Some(
                    TypeIdent(
                        "A",
                    ),
                ),
            },
            span: Span(
                37,
                44,
            ),
            state: Unchecked,
        },
        Expression {
            kind: VariableDecl {
                name: "c",
                value: Expression {
                    kind: LiteralInt(
                        5,
                    ),
                    span: Span(
                        50,
                        51,
                    ),
                    state: Unchecked,
                },
                mutable: false,
                ty: Some(
                    TypeIdent(
                        "B",
                    ),
                ),
            },
            span: Span(
                45,
                51,
            ),
            state: Unchecked,
        },
        Expression {
            kind: Ident(
                "a",
            ),
            span: Span(
                53,
                54,
            ),
            state: Unchecked,
        },
        Expression {
            kind: Ident(
                "b",
            ),
            span: Span(
                55,
                56,
            ),
            state: Unchecked,
        },
        Expression {
            kind: Ident(
                "c",
            ),
            span: Span(
                57,
                58,
            ),
            state: Unchecked,
        },
        Expression {
            kind: VariableDecl {
                name: "d",
                value: Expression {
                    kind: Ident(
                        "b",
                    ),
                    span: Span(
                        69,
                        70,
                    ),
                    state: Unchecked,
                },
                mutable: true,
                ty: Some(
                    TypeIdent(
                        "Int",
                    ),
                ),
            },
            span: Span(
                60,
                70,
            ),
            state: Unchecked,
        },
        Expression {
            kind: VariableDecl {
                name: "e",
                value: Expression {
                    kind: Ident(
                        "c",
                    ),
                    span: Span(
                        80,
                        81,
                    ),
                    state: Unchecked,
                },
                mutable: true,
                ty: Some(
                    TypeIdent(
                        "Int",
                    ),
                ),
            },
            span: Span(
                71,
                81,
            ),
            state: Unchecked,
        },
        Expression {
            kind: VariableDecl {
                name: "f",
                value: Expression {
                    kind: Ident(
                        "c",
                    ),
                    span: Span(
                        90,
                        91,
                    ),
                    state: Unchecked,
                },
                mutable: true,
                ty: Some(
                    TypeIdent(
                        "A",
                    ),
                ),
            },
            span: Span(
                83,
                91,
            ),
            state: Unchecked,
        },
    ],
)
