src/tests/snapshots/alloy__tests__snapshot_tests@types.alloy.snap
---
source: src/tests/mod.rs
expression: tokens
input_file: src/tests/cases/types.alloy
---
[
    Token {
        kind: Type,
        span: Span(
            0,
            4,
        ),
        text: "type",
    },
    Token {
        kind: Ident,
        span: Span(
            5,
            6,
        ),
        text: "A",
    },
    Token {
        kind: Colon,
        span: Span(
            7,
            8,
        ),
        text: ":",
    },
    Token {
        kind: Equals,
        span: Span(
            8,
            9,
        ),
        text: "=",
    },
    Token {
        kind: Ident,
        span: Span(
            10,
            13,
        ),
        text: "Int",
    },
    Token {
        kind: Type,
        span: Span(
            14,
            18,
        ),
        text: "type",
    },
    Token {
        kind: Ident,
        span: Span(
            19,
            20,
        ),
        text: "B",
    },
    Token {
        kind: Colon,
        span: Span(
            21,
            22,
        ),
        text: ":",
    },
    Token {
        kind: Equals,
        span: Span(
            22,
            23,
        ),
        text: "=",
    },
    Token {
        kind: Ident,
        span: Span(
            24,
            25,
        ),
        text: "A",
    },
    Token {
        kind: Ident,
        span: Span(
            27,
            28,
        ),
        text: "a",
    },
    Token {
        kind: Colon,
        span: Span(
            28,
            29,
        ),
        text: ":",
    },
    Token {
        kind: Ident,
        span: Span(
            29,
            32,
        ),
        text: "Int",
    },
    Token {
        kind: Colon,
        span: Span(
            33,
            34,
        ),
        text: ":",
    },
    Token {
        kind: Number,
        span: Span(
            35,
            36,
        ),
        text: "3",
    },
    Token {
        kind: Ident,
        span: Span(
            37,
            38,
        ),
        text: "b",
    },
    Token {
        kind: Colon,
        span: Span(
            38,
            39,
        ),
        text: ":",
    },
    Token {
        kind: Ident,
        span: Span(
            39,
            40,
        ),
        text: "A",
    },
    Token {
        kind: Colon,
        span: Span(
            41,
            42,
        ),
        text: ":",
    },
    Token {
        kind: Number,
        span: Span(
            43,
            44,
        ),
        text: "4",
    },
    Token {
        kind: Ident,
        span: Span(
            45,
            46,
        ),
        text: "c",
    },
    Token {
        kind: Colon,
        span: Span(
            46,
            47,
        ),
        text: ":",
    },
    Token {
        kind: Ident,
        span: Span(
            47,
            48,
        ),
        text: "B",
    },
    Token {
        kind: Colon,
        span: Span(
            49,
            50,
        ),
        text: ":",
    },
    Token {
        kind: Number,
        span: Span(
            50,
            51,
        ),
        text: "5",
    },
    Token {
        kind: Ident,
        span: Span(
            53,
            54,
        ),
        text: "a",
    },
    Token {
        kind: Ident,
        span: Span(
            55,
            56,
        ),
        text: "b",
    },
    Token {
        kind: Ident,
        span: Span(
            57,
            58,
        ),
        text: "c",
    },
    Token {
        kind: Ident,
        span: Span(
            60,
            61,
        ),
        text: "d",
    },
    Token {
        kind: Colon,
        span: Span(
            61,
            62,
        ),
        text: ":",
    },
    Token {
        kind: Ident,
        span: Span(
            63,
            66,
        ),
        text: "Int",
    },
    Token {
        kind: Equals,
        span: Span(
            67,
            68,
        ),
        text: "=",
    },
    Token {
        kind: Ident,
        span: Span(
            69,
            70,
        ),
        text: "b",
    },
    Token {
        kind: Ident,
        span: Span(
            71,
            72,
        ),
        text: "e",
    },
    Token {
        kind: Colon,
        span: Span(
            72,
            73,
        ),
        text: ":",
    },
    Token {
        kind: Ident,
        span: Span(
            74,
            77,
        ),
        text: "Int",
    },
    Token {
        kind: Equals,
        span: Span(
            78,
            79,
        ),
        text: "=",
    },
    Token {
        kind: Ident,
        span: Span(
            80,
            81,
        ),
        text: "c",
    },
    Token {
        kind: Ident,
        span: Span(
            83,
            84,
        ),
        text: "f",
    },
    Token {
        kind: Colon,
        span: Span(
            84,
            85,
        ),
        text: ":",
    },
    Token {
        kind: Ident,
        span: Span(
            86,
            87,
        ),
        text: "A",
    },
    Token {
        kind: Equals,
        span: Span(
            88,
            89,
        ),
        text: "=",
    },
    Token {
        kind: Ident,
        span: Span(
            90,
            91,
        ),
        text: "c",
    },
]
